overrite some methods

--- a/src/EasyORM/EasyORM.Samples/App.config
+++ b/src/EasyORM/EasyORM.Samples/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="xlinq" type="EasyORM.Configuration.ConfigSection,EasyORM"/>
+    <section name="easyORM" type="EasyORM.Configuration.ConfigSection,EasyORM"/>
   </configSections>
   <connectionStrings>
     <add name="SQLServer" connectionString="Data Source=.;Initial Catalog=IT_Company;User ID=sa;Password=123456;" providerName="System.Data.SqlClient"/>
