fix the bug that generates the insert sentense

--- a/src/EasyORM/EasyORM.Samples/App.config
+++ b/src/EasyORM/EasyORM.Samples/App.config
@@ -4,9 +4,16 @@
     <section name="easyORM" type="EasyORM.Configuration.ConfigSection,EasyORM"/>
   </configSections>
   <connectionStrings>
+    <add name="mysqlite" connectionString="Data Source=my.db;Version=3" providerName="System.Data.SQLite"/>
     <add name="SQLServer" connectionString="Data Source=.;Initial Catalog=IT_Company;User ID=sa;Password=123456;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  <xlinq connectionStringName="sqlServerTest" sequenceTable="Seqs" dataBase="SQLServer"></xlinq>
+  <easyORM connectionStringName="mysqlite"></easyORM>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.99.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
+    </DbProviderFactories>
+  </system.data>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
