--- a/src/EasyORM/EasyORM.Samples/EasyORM.Samples.csproj
+++ b/src/EasyORM/EasyORM.Samples/EasyORM.Samples.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,11 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\T_Department.cs" />
+    <Compile Include="Models\T_User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="my.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EasyORM\EasyORM.csproj">
