--- a/src/EasyORM/EasyORM.UnitTests/EasyORM.UnitTests.csproj
+++ b/src/EasyORM/EasyORM.UnitTests/EasyORM.UnitTests.csproj
@@ -50,8 +50,19 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="DynamicExpressionTest.cs" />
+    <Compile Include="Models\T_User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EasyORM\EasyORM.csproj">
+      <Project>{18cdd354-48db-4d2e-886b-1abeb02fb717}</Project>
+      <Name>EasyORM</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="my.db" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
